Accessibility - Improve the highlighting for click-draggable list items (list item question and page re-ordering). Also, fix the focus issue whereby focus was maintained on an item after tabbing out to a different button. DAC_Non_Text_Contrast_01

--- a/designer/server/src/common/components/editor-card/_editor-card.scss
+++ b/designer/server/src/common/components/editor-card/_editor-card.scss
@@ -162,6 +162,7 @@ $defra-brand-colour: govuk-organisation-colour(department-for-environment-food-r
   background-color: #e5f5ff;
   outline: 4px solid #ffdd00;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid govuk-colour("black");
 }
 
 .border-left-container {
